[gd_scene load_steps=8 format=3 uid="uid://tvdb10i8y3gv"]

[ext_resource type="Script" path="res://scenes/Special/fan_platform.gd" id="1_1fjrh"]
[ext_resource type="Texture2D" uid="uid://cfu7a7xar2l7m" path="res://assets/Special/Fan Platform/On (32x10).png" id="1_xsfr3"]

[sub_resource type="Animation" id="Animation_vrkwg"]
resource_name = "Turn_On"
length = 0.18
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aaahb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 2.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_66mc2"]
resource_name = "Turn_Off"
length = 0.76
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.000434428, 0.100434, 0.200434, 0.3, 0.4, 0.5, 0.6, 0.699566),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 8), Vector2(0, 16), Vector2(0, 24), Vector2(0, 32), Vector2(0, 40), Vector2(0, 48), Vector2(0, 56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(16, 2.5), Vector2(16, 10.5), Vector2(16, 18.5), Vector2(16, 26.5), Vector2(16, 34.5), Vector2(16, 42.5), Vector2(16, 50.5), Vector2(16, 58.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwgi7"]
_data = {
"RESET": SubResource("Animation_aaahb"),
"Turn_Off": SubResource("Animation_66mc2"),
"Turn_On": SubResource("Animation_vrkwg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nc1pa"]
size = Vector2(32, 5.16667)

[node name="Fan_Platform" type="StaticBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_1fjrh")

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture_filter = 1
texture = ExtResource("1_xsfr3")
centered = false
hframes = 4
region_rect = Rect2(32, 0, 32, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
root_node = NodePath("../..")
autoplay = "Turn_On"
libraries = {
"": SubResource("AnimationLibrary_lwgi7")
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 0.666667)
shape = SubResource("RectangleShape2D_nc1pa")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 2.5)
shape = SubResource("RectangleShape2D_nc1pa")

[node name="Delay" type="Timer" parent="."]
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Delay" to="." method="_on_delay_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
